<resources>

    <string name="app_name">Comparisons</string>

    <string name="less_than_button">&lt;</string>
    <string name="equal_button">&#61;</string>
    <string name="greater_than_button">&gt;</string>

    <string name="tv_number_left">1 + 1</string>
    <string name="tv_number_right">3</string>

    <string name="answer">Correct</string>

    <string name="new_game">Start a new game</string>
    <string name="correct">Correct</string>
    <string name="wrong_answer">Wrong Answer</string>

    <string name="points_text">Points:</string>
    <string name="points_number_default">0</string>

</resources>
