<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.giorgosioak.comparisons.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_left"
                android:layout_width="@dimen/numbers_view_side"
                android:layout_height="@dimen/numbers_view_side"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:gravity="center_vertical"
                android:text="@string/tv_number_left"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Space
                android:layout_width="@dimen/space_gap"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/number_right"
                android:layout_width="@dimen/numbers_view_side"
                android:layout_height="@dimen/numbers_view_side"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:gravity="center_vertical"
                android:text="@string/tv_number_right"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_gap" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

            <Button
                android:id="@+id/less_than"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="isLess"
                android:text="@string/less_than_button"
                android:textSize="24sp" />

            <Space
                android:layout_width="@dimen/space_gap_small"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="isEqual"
                android:text="@string/equal_button"
                android:textSize="24sp" />

            <Space
                android:layout_width="@dimen/space_gap_small"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/greater_than"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="isGreater"
                android:text="@string/greater_than_button"
                android:textSize="24sp" />
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="139dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
